moved all publishes to the firehose, removed from api
